# dummy_publisher

./: CMakeLists.txt  package.xml
launch/: pose_and_pointcloud2_dummy_publisher.launch
src/: dummy_pointcloud_publisher_node.cpp  dummy_pose_publisher_node.cpp
